# learning-haskell

./: README.md
haskell-tutorial/: haskell-tutorial.cabal
realworld-haskell/: LICENSE  realworld-haskell.cabal  stack.yaml
realworld-haskell/src/chapter03/: BookStore.hs  Lending.hs  Roygbiv.hs  Second.hs  ShapeUnion.hs  Tree.hs
realworld-haskell/src/chapter04/: DLTS.hs  EfficientList.hs  FixLines  Fold.hs  IntParse.hs  InteractWith  Partial.hs  Plus.hs  hello-in.txt  hello-out.txt
realworld-haskell/src/chapter05/: Main.hs  Prettify.hs  PrettyJSON.hs  PrettyStub.hs  PutJSON.hs  SimpleJSON.hs  simple
realworld-haskell/src/chapter06-typeclasses/: Color.hs  ColorDerived.hs  NewType.hs  Overlap.hs  Read  Read.hs  SimpleClass.hs
realworld-haskell/src/chapter07-io/: BasicIO  BasicIO.hs  CallingPure  CallingPure.hs  ToUpper-Impl  ToUpper-Impl.hs  input.txt  output.txt
wc/: wc.cabal
wc/app/: Main.hs
