name:                realworld-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hengxin/realworld-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              hengxin
maintainer:          hfwei@nju.edu.cn
copyright:           MIT License
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable realworld-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , realworld-haskell
  default-language:    Haskell2010

test-suite realworld-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , realworld-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hengxin/realworld-haskell
